test/corpus/alias.txt
==================
alias with integer literal
==================

alias MAX_BITS = 64

---

(module
  (alias_declaration
    name: (identifier)
    value: (integer)))

==================
alias with identifier (function reference)
==================

alias hello = my_function

---

(module
  (alias_declaration
    name: (identifier)
    value: (identifier)))

==================
alias with parameterized type
==================

alias Float64Array = SIMD[DType.float64, 1]

---

(module
  (alias_declaration
    name: (identifier)
    value: (subscript
      value: (identifier)
      subscript: (attribute
        object: (identifier)
        attribute: (identifier))
      subscript: (integer))))

==================
alias inside struct body
==================

struct Config:
    alias DEFAULT_SIZE = 64

---

(module
  (struct_definition
    name: (identifier)
    body: (block
      (alias_declaration
        name: (identifier)
        value: (integer)))))

==================
alias with type and value (typed constant)
==================

alias DEFAULT_SIZE: Int = 64

---

(module
  (alias_declaration
    name: (identifier)
    type: (type
      (identifier))
    value: (integer)))

==================
alias with type only (abstract, no value)
==================

alias ElementType: AnyType

---

(module
  (alias_declaration
    name: (identifier)
    type: (type
      (identifier))))

==================
abstract alias inside trait body
==================

trait Container:
    alias ElementType: AnyType

---

(module
  (trait_definition
    name: (identifier)
    body: (block
      (alias_declaration
        name: (identifier)
        type: (type
          (identifier))))))

==================
abstract alias with parameterized type bound inside trait
==================

trait Sequence:
    alias Iter: Iterator[Self]

---

(module
  (trait_definition
    name: (identifier)
    body: (block
      (alias_declaration
        name: (identifier)
        type: (type
          (generic_type
            (identifier)
            (type_parameter
              (type
                (identifier)))))))))
