test/corpus/multi_decorator_struct.txt
==================
stacked decorators on struct: @register_passable("trivial") then @parameter
==================

@register_passable("trivial")
@parameter
struct Color:
    pass

---

(module
  (decorated_definition
    (decorator
      (call
        function: (identifier)
        arguments: (argument_list
          (string
            (string_start)
            (string_content)
            (string_end)))))
    (decorator
      (identifier))
    definition: (struct_definition
      name: (identifier)
      body: (block
        (pass_statement)))))
