test/corpus/raises_double.txt
==================
double raises in one signature is an error
==================

fn f() raises -> Int raises:
    pass

---

(module
  (function_definition
    name: (identifier)
    parameters: (parameters)
    (raises_clause)
    return_type: (type
      (identifier))
    (ERROR
      (raises_clause))
    body: (block
      (pass_statement))))
